# coindcx-python

./: .gitignore  CLAUDE.md  FUTURES_POSITIONS_API.md  LICENSE  MANIFEST.in  Makefile  README.md  cli.py  coindcx_documentation.md  pyproject.toml  requirements.txt  setup.py
ai/: coindcx_documentation.html  coindcx_documentation.md
coindcx/: __init__.py  client.py  enums.py  exceptions.py
coindcx/endpoints/: __init__.py  futures.py  margin.py  market.py  spot.py
dev/: publish.sh
examples/: basic_usage.py  candles_tests.py  futures_candles.py  futures_instruments.py  futures_positions.py  test_positions.py
