[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "coindcx"
version = "0.1.1"
description = "Python wrapper for CoinDCX API with support for spot, margin, and futures trading"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    {name = "Sanjay Vamja", email = "svamja@gmail.com"}
]
keywords = ["coindcx", "api", "trading", "cryptocurrency", "bitcoin", "ethereum", "futures", "spot", "margin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
    "html-to-markdown",
]

[project.urls]
Homepage = "https://github.com/svamja/coindcx-python"
Documentation = "https://github.com/svamja/coindcx-python#readme"
Repository = "https://github.com/svamja/coindcx-python"
Issues = "https://github.com/svamja/coindcx-python/issues"

[tool.setuptools]
packages = ["coindcx", "coindcx.endpoints"]

[tool.setuptools.package-data]
coindcx = ["py.typed"]
